iac/k8s/components/apps/rag/ragflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ragflow-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  ingressClassName: traefik
  rules:
    - host: "ragflow.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ragflow
                port:
                  number: 80
